syntax="proto2";
//option java_package = "gash.router.server.raft";

import "AppendEntries.proto";
import "HeartBeat.proto";
import "Vote.proto";


//	WorkMessage//

message WorkMessage{

	required int64 unixTimeStamp = 1;
	oneof payload{ 
	 AppendEntriesPacket appendEntriesPacket = 2;
	 HeartBeatPacket heartBeatPacket = 3;
	 VotePacket	voteRPCPacket =4;	 
	}

}